# drf-authtoken

./: .gitignore  .travis.yml  LICENCE  README.md  manage.py  requirements.txt  setup.cfg
drf-authtoken/: settings.py  urls.py  wsgi.py
drf_auth/: apps.py  mail.py  serializers.py  tests.py  urls.py  views.py
drf_auth/static/drf_auth/: password_change.css  password_change.js
drf_auth/templates/drf_auth/: password_change_form.html
