[metadata]
name = drf-restauth
version = 0.1.2
description = Painless djangorestframework TokenAuthentication.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abiiranathan/drf-restauth.git
author = Dr. Abiira Nathan
author_email = nabiira2by2@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2.3
    djangorestframework >=3.12.4
    python-dotenv >=0.17.1